add all get API default to create Training Class